# match-momentum

./: .gitignore  CONTRIBUTING.md  IF_PRD.md  LICENSE  README.md  ROADMAP.md  TAGGER_PLAN.md  compare.py  momentum.py  pyproject.toml
.github/workflows/: tests.yml
core/: chart.py  engine.py  schema.py
core/tests/: test_engine.py
docs/: tracer-dataflow.drawio
examples/: events_arg_egy.json  events_aus_tur.json  events_rugby_demo.json  tagger-sample.json  tracer-sample.json
exports/HOME_v_AWAY/: actions.csv  match.json  players.csv  team.csv
legacy/tagger/: README.md  index.html
report/: README.md  heatmap.js  index.html  ingest.js  momentum.js  pitch.js  report.css  selfcheck.html  views.js
report/sample/: actions.csv  match.json  positions.csv  team.csv
sources/: __init__.py  base.py  custom_json.py
tagger/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
tagger/src/: App.css  App.tsx
tracer/: README.md  TUNING.md  __init__.py  app.py  autosave.py  canvas.py  chips.py  config.py  continuity.py  devpanel.py  events.py  export.py  features.py  fit.py  fixtures.py  geometry.py  keystate.py  match_state.py  pitch.py  raw_export.py  review.py  segmentation.py  setup.py  sweep.py  validate.py
tracer/tests/: test_actions.py  test_autosave.py  test_boundary_scoring.py  test_continuity.py  test_corpus.py  test_devpanel.py  test_discipline.py  test_events.py  test_features.py  test_fit.py  test_fixtures.py  (+19 more)
translators/: __init__.py  base.py  football.py  football_weights.json  rugby.py  rugby_weights.json
(+38 files in other folders)
