[project]
name = "match-momentum"
version = "0.1.0"
description = "Sport-agnostic match momentum charts + live tracing tools"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "nicegui",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "translators", "sources", "tracer"]

[tool.setuptools.package-data]
translators = ["*.json"]
