[project]
name = "phase-trace"
version = "0.1.0"
description = "Trace rugby possessions with the mouse, get an event stream and a momentum chart"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "nicegui",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "translators", "sources", "tracer"]

[tool.setuptools.package-data]
translators = ["*.json"]
